impr(styles): correct position of login box on small screens

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -82,7 +82,7 @@ body > footer {
 
 .ctn-wrapper > [notifications-panel] {
   position: absolute;
-  bottom: 40px;
+  bottom: 10px;
   right: 30px;
   max-width: 80%;
 }
