--- a/resources/less/directives/cam-breadcrumbs-panel.less
+++ b/resources/less/directives/cam-breadcrumbs-panel.less
@@ -8,18 +8,14 @@
 
   > .breadcrumb {
     font-size: 0.85em;
+
     line-height: @grid-gutter-width;
+    background-color: inherit;
+    margin: 0 0 20px;
+    padding: 0 10px;
 
     > li + li:before {
       display: none;
-    }
-
-    @media (min-width: @screen-md) {
-      border-radius: 0;
-
-      background-color: inherit;
-      margin: 0 0 20px;
-      padding: 0 10px 0 10px;
     }
   }
 }
